tests/ifcc-test-output/testfiles-3_02_00_const_invalid/gcc-compile.txt
input.c: In function ‘main’:
input.c:3:9: error: invalid suffix "a" on integer constant
    3 |     x = 1a;
      |         ^~

return code: 1
